--- a/pom.xml
+++ b/pom.xml
@@ -50,11 +50,11 @@
     </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-core</artifactId>
+            <artifactId>hamcrest-all</artifactId>
             <version>1.3</version>
-            <scope>compile</scope>
         </dependency>
-    <dependency>
+
+        <dependency>
         <groupId>com.codeborne</groupId>
         <artifactId>phantomjsdriver</artifactId>
         <version>1.4.4</version>
